<resources>
    <string name="app_name">Swoosh</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team">Find a team in your city and dominate your league.</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="mensTxt">mens</string>
    <string name="todo">TODO</string>
    <string name="womens">Womens</string>
    <string name="womensTxt">womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="co_edTxt">Co-Ed</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="beginnerTxt">beginner</string>
    <string name="baller">Baller</string>
    <string name="ballerTxt">baller</string>
    <string name="finish">FINISH</string>
    <string name="selectLeagueMessage">Please select a league.</string>
    <string name="selectSkillMessage">Please select a skill.</string>
    <string name="FinishActivityMessageTxt">Looking for %1$s %2$s league near you…</string>
    <string name="noInternetConnection">No Internet Connection</string>
    <string name="getdata">GetData</string>
    <string name="click_me">Click me!</string>
</resources>
