<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple"
    tools:context=".controller.FinishActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exercisebg"
        tools:visibility="visible" />

    <Button
        android:id="@+id/getDataButtonRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="onGetDataButtonRightClicked"
        android:text="@string/click_me"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/searchLeaguesText"
        app:layout_constraintTop_toBottomOf="@+id/searchLeaguesText" />

    <TextView
        android:id="@+id/searchLeaguesText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Looking for a co-ed beginner league near you..." />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="@+id/searchLeaguesText"
        app:layout_constraintStart_toStartOf="@+id/searchLeaguesText"
        app:layout_constraintTop_toBottomOf="@+id/searchLeaguesText" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar">

        <TextView
            android:id="@+id/resultsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            tools:text="Results from HttpRequest" />
    </ScrollView>

    <Button
        android:id="@+id/getDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="onGetDataButtonClicked"
        android:text="@string/getdata"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="@+id/searchLeaguesText"
        app:layout_constraintTop_toBottomOf="@+id/searchLeaguesText" />

</androidx.constraintlayout.widget.ConstraintLayout>